@@ -543,6 +543,9 @@ Trunk -  Unreleased
     HIVE-1809 Hive Comparison Operators are broken for NaN values
     (Paul Butler via Ning Zhang)
 
+    HIVE-1808 Wrong parameter names in HiveConf/hive-default.xml
+    for joins (Liyin Tang via namit)
+
   TESTS
 
     HIVE-1464. improve  test query performance
